--- a/index.html
+++ b/index.html
@@ -5,8 +5,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu Slider & Modal</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/0feb6ebab4.js"></script>
   </head>
   <body>
+    <nav>
+      <div class="logo">
+        <img src="./img/wsf.jpg" alt="user" />
+      </div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact Me</a></li>
+      </ul>
+    </nav>
+    <header>
+      <button id="toggle" class="toggle">
+        <i class="fa fa-bars fa-2x"></i>
+      </button>
+      <h1>My Landing Page</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quae.
+      </p>
+      <button class="cta-btn" id="open">Sign Up</button>
+    </header>
+
+    <div class="container">
+      <h2>What is this landing page about?</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic asperiores
+        sed facilis, cumque tempore error voluptate dolorem mollitia eaque,
+        libero modi nostrum ducimus recusandae alias eos praesentium repudiandae
+        in. Aperiam!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam id
+        aliquid ex dolorum cum, quae provident minima voluptate architecto
+        illum.
+      </p>
+      <h2>Tell me more</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus esse
+        nostrum mollitia ipsam. Similique veritatis nostrum accusantium! Quo
+        soluta magnam, officia eius delectus voluptates itaque saepe, provident
+        nam sequi cupiditate enim esse non corporis architecto est, beatae
+        officiis at nesciunt!
+      </p>
+      <h2>Benefits</h2>
+      <ul>
+        <li>Lifetime Access</li>
+        <li>30 Day Money Back</li>
+        <li>Tailored Customer Support</li>
+      </ul>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ea
+        aliquam vel qui, maiores autem ipsum eos optio quibusdam, quasi, atque
+        ratione placeat explicabo itaque ducimus vitae quam nemo consequatur
+        dolores. Sequi dolore culpa quasi vitae qui optio cupiditate dolor?
+      </p>
+    </div>
+
+    <!-- Modal -->
+    <!-- Modal -->
+    <div class="modal-container" id="modal">
+      <div class="modal">
+        <button class="close-btn" id="close">
+          <i class="fa fa-times"></i>
+        </button>
+        <div class="modal-header">
+          <h3>Sign Up</h3>
+        </div>
+        <div class="modal-content">
+          <p>Register with us to get offers, support and more</p>
+          <form class="modal-form">
+            <div>
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                placeholder="Enter Name"
+                class="form-input"
+              />
+            </div>
+            <div>
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                placeholder="Enter Email"
+                class="form-input"
+              />
+            </div>
+            <div>
+              <label for="password">Password</label>
+              <input
+                type="password"
+                id="password"
+                placeholder="Enter Password"
+                class="form-input"
+              />
+            </div>
+            <div>
+              <label for="password2">Confirm Password</label>
+              <input
+                type="password"
+                id="password2"
+                placeholder="Confirm Password"
+                class="form-input"
+              />
+            </div>
+            <input type="submit" value="Submit" class="submit-btn" />
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
