--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="./img/wsf.jpg" alt="user" />
+        <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="user" />
       </div>
       <ul>
         <li><a href="#">Home</a></li>
